# ailock

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ailock-ci.yml
ailock/: __init__.py  cli.py
ailock/commands/: __init__.py  audit.py  generate.py  verify.py
ailock/core/: __init__.py  constants.py  lockfile.py  pypi.py  resolver.py
ailock/data/: known-bad.json
tests/: test_audit.py  test_lockfile.py  test_resolver.py
