[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ailock"
version = "0.1.0"
description = "Cryptographic lockfile for AI/LLM Python dependencies — catches supply chain attacks before they hit prod"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Midnight Run", email = "ai@midnightrun.ai"}
]
keywords = [
  "ai", "llm", "security", "supply-chain", "lockfile",
  "litellm", "langchain", "openai", "transformers",
  "pypi", "integrity", "verification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "packaging>=23.0",
    "rich>=13.0",
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
    "black",
    "ruff",
]

[project.scripts]
ailock = "ailock.cli:main"

[project.urls]
Homepage = "https://midnightrun.ai/ailock/"
Repository = "https://github.com/soletty/ailock"
Issues = "https://github.com/soletty/ailock/issues"
"Known-Bad DB" = "https://github.com/soletty/ailock/blob/main/ailock/data/known-bad.json"

[tool.setuptools.packages.find]
where = ["."]
include = ["ailock*"]

[tool.setuptools.package-data]
ailock = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
